--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ flask-cors>=3.0
 werkzeug>=2.2
 python-dotenv>=1.0
 google-generativeai>=0.3 
+google-genai>=0.6.0
 flask_sqlalchemy>=3.0
 langchain>=0.1.0
 langchain-community>=0.0.20
