--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,6 @@ langchain-google-genai>=0.0.10
 beautifulsoup4>=4.12.0
 requests>=2.31.0
 youtube-transcript-api>=0.6.0
+PyPDF2>=3.0.0
+python-docx>=0.8.11
+pdfplumber>=0.9.0
