--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,16 @@ youtube-transcript-api>=0.6.0
 PyPDF2>=3.0.0
 python-docx>=0.8.11
 pdfplumber>=0.9.0
+selenium>=4.15.0
+webdriver-manager>=4.0.0
+linkedin-scraper>=2.11.0
+lxml>=4.9.0
+fake-useragent>=1.4.0
+crewai>=0.28.0
+langchain-openai>=0.1.0
+langchain-community>=0.0.20
+langchain-core>=0.2.0
+langgraph>=0.2.0
+duckduckgo-search>=4.1.0
+newspaper3k>=0.2.8
+requests-html>=0.10.0
