--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,6 @@ langgraph>=0.2.0
 duckduckgo-search>=4.1.0
 newspaper3k>=0.2.8
 requests-html>=0.10.0
+pandas>=1.5.0
+openpyxl>=3.1.0
+httpx>=0.24.0
