--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
 GEMINI_API_KEY='api'
+
+# Güvenlik ayarları
+SECRET_KEY=btk-project-2024-secure-key-change-in-production-8f7d6e5c4b3a2
+FLASK_ENV=development
+FLASK_DEBUG=False
+
+# Production ayarları (production'da değiştirin)
+# FLASK_ENV=production
+# FLASK_DEBUG=False
