--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,6 @@ python-docx>=0.8.11
 pdfplumber>=0.9.0
 selenium>=4.15.0
 webdriver-manager>=4.0.0
-httpx>=0.24.0 
+httpx>=0.24.0
+gunicorn>=21.2.0
+psycopg2-binary>=2.9.0 
