--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     env: python
     plan: starter
     buildCommand: pip install -r requirements.txt
-    startCommand: python app.py || gunicorn --bind 0.0.0.0:$PORT --workers 1 --timeout 120 app:app
+    startCommand: gunicorn --bind 0.0.0.0:$PORT --workers 2 --timeout 300 --keep-alive 5 --max-requests 1000 --max-requests-jitter 100 app:app
     envVars:
       - key: FLASK_ENV
         value: production
