--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ python-dotenv>=1.0
 google-generativeai>=0.3 
 google-genai>=0.6.0
 flask_sqlalchemy>=3.0
+flask-session>=0.5.0
 beautifulsoup4>=4.12.0
 requests>=2.31.0
 PyPDF2>=3.0.0
