--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,10 @@ requests>=2.31.0
 PyPDF2>=3.0.0
 python-docx>=0.8.11
 pdfplumber>=0.9.0
-selenium>=4.15.0
-webdriver-manager>=4.0.0
+selenium>=4.16.0
+webdriver-manager>=4.0.1
 httpx>=0.24.0
 gunicorn>=21.2.0
-psycopg2-binary>=2.9.0 
+psycopg2-binary>=2.9.0
+lxml>=4.9.0
+urllib3>=2.0.0 
