--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,8 @@ requests>=2.31.0
 PyPDF2>=3.0.0
 python-docx>=0.8.11
 pdfplumber>=0.9.0
-# selenium>=4.16.0  # Production'da memory sorunu nedeniyle devre dışı
-# webdriver-manager>=4.0.1  # Production'da memory sorunu nedeniyle devre dışı
+selenium>=4.16.0
+webdriver-manager>=4.0.1
 httpx>=0.24.0
 gunicorn>=21.2.0
 psycopg2-binary>=2.9.0
