--- a/env.example
+++ b/env.example
@@ -10,6 +10,7 @@ FRONTEND_URL=http://localhost:5173
 
 # API Keys
 GEMINI_API_KEY=your-gemini-api-key-here
+SERPAPI_KEY=your-serpapi-key-here
 
 # Production Settings
 # FLASK_ENV=production
