--- a/render.yaml
+++ b/render.yaml
@@ -19,6 +19,8 @@ services:
         value: https://codematetr.onrender.com
       - key: GEMINI_API_KEY
         sync: false
+      - key: SERPAPI_KEY
+        sync: false
 
   # Frontend Static Site
   - type: web
