--- a/requirements.txt
+++ b/requirements.txt
@@ -6,15 +6,15 @@ google-generativeai>=0.3
 google-genai>=0.6.0
 flask_sqlalchemy>=3.0
 flask-session>=0.5.0
-beautifulsoup4>=4.12.0
+
 requests>=2.31.0
 PyPDF2>=3.0.0
 python-docx>=0.8.11
 pdfplumber>=0.9.0
-selenium>=4.16.0
-webdriver-manager>=4.0.1
+
 httpx>=0.24.0
 gunicorn>=21.2.0
 psycopg2-binary>=2.9.0
 lxml>=4.9.0
-urllib3>=2.0.0 
+urllib3>=2.0.0
+google-search-results>=2.4.2 
