--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -40,23 +40,15 @@ http {
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
         add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
 
-        # Handle client-side routing - tüm route'ları index.html'e yönlendir
+        # Handle client-side routing
         location / {
             try_files $uri $uri/ /index.html;
-            
-            # Cache control for HTML files
-            location ~* \.html$ {
-                expires -1;
-                add_header Cache-Control "no-cache, no-store, must-revalidate";
-                add_header Pragma "no-cache";
-            }
         }
 
         # Cache static assets
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
             expires 1y;
             add_header Cache-Control "public, immutable";
-            add_header Vary "Accept-Encoding";
         }
 
         # API proxy (if needed)
@@ -66,33 +58,6 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # CORS headers for API
-            add_header Access-Control-Allow-Origin "*" always;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-            add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With" always;
-            
-            # Handle preflight requests
-            if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin "*" always;
-                add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-                add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With" always;
-                add_header Access-Control-Max-Age 1728000;
-                add_header Content-Type "text/plain; charset=utf-8";
-                add_header Content-Length 0;
-                return 204;
-            }
         }
-
-        # Health check endpoint
-        location /health {
-            access_log off;
-            return 200 "healthy\n";
-            add_header Content-Type text/plain;
-        }
-
-        # Error pages
-        error_page 404 /index.html;
-        error_page 500 502 503 504 /index.html;
     }
 } 
