--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postbuild": "cp public/_redirects dist/ && cp public/_headers dist/ && cp public/404.html dist/ && cp public/render.yaml dist/"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
