--- a/render.yaml
+++ b/render.yaml
@@ -26,8 +26,12 @@ services:
   - type: web
     name: codematetr
     env: static
-    buildCommand: cd frontend && npm install && npm run build
+    buildCommand: cd frontend && npm install && npm run build && npm run postbuild
     staticPublishPath: ./frontend/dist
+    routes:
+      - type: rewrite
+        source: "/*"
+        destination: "/index.html"
     envVars:
       - key: VITE_API_BASE_URL
         value: https://btk-project-backend.onrender.com
