--- a/render.yaml
+++ b/render.yaml
@@ -22,12 +22,11 @@ services:
       - key: JSEARCH_API_KEY
         sync: false
 
-  # Frontend Static Site
+  # Frontend Web Service (Docker)
   - type: web
     name: codematetr
-    env: static
-    buildCommand: cd frontend && npm install && npm run build
-    staticPublishPath: ./frontend/dist
+    env: docker
+    dockerfilePath: ./frontend/Dockerfile
     envVars:
       - key: VITE_API_BASE_URL
         value: https://btk-project-backend.onrender.com
