--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -27,9 +27,6 @@ http {
         application/atom+xml
         image/svg+xml;
 
-    # Rate limiting
-    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
-
     server {
         listen 80;
         server_name localhost;
@@ -40,47 +37,29 @@ http {
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-XSS-Protection "1; mode=block" always;
         add_header X-Content-Type-Options "nosniff" always;
-        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-        add_header Content-Security-Policy "default-src 'self' https: data: blob: 'unsafe-inline' 'unsafe-eval'; img-src 'self' data: https:; font-src 'self' data: https:;" always;
-        add_header Permissions-Policy "camera=(), microphone=(), geolocation=()" always;
+        add_header Referrer-Policy "no-referrer-when-downgrade" always;
+        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
 
-        # Handle client-side routing - SPA fallback
+        # Handle client-side routing - React Router support
         location / {
             try_files $uri $uri/ /index.html;
-            add_header Cache-Control "no-cache, no-store, must-revalidate" always;
-            add_header Pragma "no-cache" always;
-            add_header Expires "0" always;
         }
 
-        # Cache static assets aggressively
+        # Cache static assets
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
             expires 1y;
             add_header Cache-Control "public, immutable";
-            add_header Vary "Accept-Encoding";
         }
 
-        # Handle API requests
+        # API proxy (if needed)
         location /api/ {
-            limit_req zone=api burst=20 nodelay;
-            proxy_pass https://btk-project-backend.onrender.com/;
+            proxy_pass http://backend:8000/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_connect_timeout 30s;
-            proxy_send_timeout 30s;
-            proxy_read_timeout 30s;
         }
 
-        # Health check endpoint
-        location /health {
-            access_log off;
-            return 200 "healthy\n";
-            add_header Content-Type text/plain;
-        }
 
-        # Error pages
-        error_page 404 /index.html;
-        error_page 500 502 503 504 /index.html;
     }
 } 
