user history fixed

--- a/.env
+++ b/.env
@@ -1,2 +1,19 @@
+# Flask Configuration
+FLASK_ENV=development
+SECRET_KEY=your-super-secret-key-change-this-in-production
+
+# Database Configuration (SQLite for development)
+DATABASE_URL=sqlite:///btk_project.db
+
+# Frontend URL (for CORS)
+FRONTEND_URL=http://localhost:5173
+
+# API Keys
 GEMINI_API_KEY="api_key"
+JSEARCH_API_KEY=your-jsearch-api-key-here
+
+# Production Settings
+# FLASK_ENV=production
+# DATABASE_URL=postgresql://username:password@host:5432/database
+# FRONTEND_URL=https://your-frontend-domain.com
 
