--- a/.env
+++ b/.env
@@ -1,19 +1,19 @@
 # Flask Configuration
-FLASK_ENV=development
+FLASK_ENV=production
 SECRET_KEY=your-super-secret-key-change-this-in-production
 
-# Database Configuration (SQLite for development)
-DATABASE_URL=sqlite:///btk_project.db
+# Database Configuration (Render.com PostgreSQL)
+DATABASE_URL=postgresql://btk_project_user:DQqmBA7n0gxuuwu5w9gEGpIit3zz14IL@dpg-d28go16r433s73e0ov90-a:5432/btk_project
 
 # Frontend URL (for CORS)
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://codematetr.onrender.com
 
 # API Keys
 GEMINI_API_KEY="api_key"
 JSEARCH_API_KEY=your-jsearch-api-key-here
 
 # Production Settings
-# FLASK_ENV=production
-# DATABASE_URL=postgresql://username:password@host:5432/database
-# FRONTEND_URL=https://your-frontend-domain.com
+FLASK_ENV=production
+# DATABASE_URL will be set by Render.com environment variables
+# FRONTEND_URL=https://codematetr.onrender.com
 
