--- a/env.example
+++ b/env.example
@@ -9,7 +9,7 @@ DATABASE_URL=postgresql://username:password@localhost:5432/btk_project
 FRONTEND_URL=http://localhost:5173
 
 # API Keys
-GEMINI_API_KEY=your-gemini-api-key-here
+# GEMINI_API_KEY artık kullanılmıyor - kullanıcılar kendi API key'lerini login'de giriyorlar
 JSEARCH_API_KEY=your-jsearch-api-key-here
 
 # Production Settings
